# django-easy-audit

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: build.yml  cd.yml  ci.yml
djangoeasyaudit/: __init__.py  apps.py  signals.py
djangoeasyaudit/middleware/: djangoeasyaudit.py
djangoeasyaudit/migrations/: 0001_initial.py
easyaudit/: __init__.py  admin.py  admin_helpers.py  app_settings.py  apps.py  backends.py  crudhistory_admin_mixin.py  manage.py  models.py  settings.py  signals.py  utils.py
easyaudit/locale/de/LC_MESSAGES/: django.mo  django.po
easyaudit/locale/fr/LC_MESSAGES/: django.mo  django.po
easyaudit/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
easyaudit/locale/ru-ru/LC_MESSAGES/: django.mo  django.po
easyaudit/locale/ru/LC_MESSAGES/: django.mo  django.po
easyaudit/middleware/: easyaudit.py
easyaudit/migrations/: 0001_initial.py  0002_auto_20170125_0759.py  0003_auto_20170228_1505.py  0004_auto_20170620_1354.py  0004_auto_20170620_1354_squashed_0019_alter_crudevent_changed_fields_and_more.py  0004_auto_20171018_1329.py  0005_auto_20170713_1155.py  0006_auto_20171018_1242.py  0006_requestevent.py  0007_auto_20180105_0838.py  0008_auto_20180220_1908.py  0009_auto_20180314_2225.py  0010_repr_text.py  0011_auto_20181101_1339.py  0012_auto_20181018_0012.py  0013_auto_20190723_0126.py  0013_crudeventbiginteger_crudeventuuid.py  0014_auto_20200513_0008.py  0015_auto_20201019_1217.py  0016_alter_crudevent_event_type.py  0017_alter_crudevent_object_json_repr.py  0017_alter_requestevent_datetime.py  0017_auto_20220217_0638.py  0017_auto_20220219_2157.py  0018_auto_20240105_0125.py  0018_crudevent_easyaudit_c_datetim_a13040_idx.py  0018_rename_crudevent_object_id_content_type_easyaudit_c_object__82020b_idx.py  0018_rename_crudevent_object_id_content_type_index.py  0019_alter_crudevent_changed_fields_and_more.py  0020_alter_crudevent_changed_fields.py  0020_alter_crudevent_changed_fields_and_more.py  0021_crudevent_metadata.py
easyaudit/signals/: auth_signals.py  crud_flows.py  model_signals.py  request_signals.py
easyaudit/templates/admin/easyaudit/: change_list.html  purge_confirmation.html
easyaudit/tests/: db.sqlite3
easyaudit/tests/test_app/: backup_apps.py  models.py  tests.py  urls.py  views.py
easyaudit/tests/test_app/migrations/: 0001_initial.py  0002_auto_20180220_1533.py  0003_testbigintforeignkey_testbigintm2m_testbigintmodel_testuuidforeignkey_testuuidm2m_testuuidmodel.py  0004_testbigintm2mproxy_testm2mproxy_testuuidm2mproxy_and_more.py  0004_testm2mproxy_testmultim2m.py  0004_testsoftdeletemodel.py
easyaudit/tests/test_project/: asgi.py  settings.py  urls.py
tests/: asgi.py  conftest.py  settings.py  test_m2m_logging.py  test_main.py  urls.py  wsgi.py
tests/test_app/: admin.py  apps.py  managers.py  models.py  urls.py  views.py
tests/test_app/migrations/: 0001_initial.py  0002_add_article_tag_m2m.py  0002_custommanagermodel.py  0003_metadata_models.py  0004_place_restaurant_m2m_inheritance.py
