[tool.poetry]
name = "django-easy-audit"
version = "1.3.9-a2"
description = "Yet another Django audit log app, hopefully the simplest one."
license = "GPL3"
authors = ["Natán Calzolari <natancalzolari@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/soynatan/django-easy-audit"
repository = "https://github.com/soynatan/django-easy-audit"
documentation = "https://github.com/soynatan/django-easy-audit/wiki"
classifiers = [
    "Environment :: Plugins",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "easyaudit" }]

[tool.poetry.dependencies]
python = "^3.9"
django = ">=4.2,<7"

[tool.poetry.group.dev.dependencies]
django-upgrade = "*"
djlint = "*"
pre-commit = "*"
ruff = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-django = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
    "--ds=tests.settings",         # Forces pytest-django to use test settings
    "--ignore-glob='*/models.py'",
    "-W error",
]

[tool.ruff]
extend-exclude = ["migrations"]
line-length = 92
target-version = "py39"
show-fixes = true

[tool.ruff.lint]
ignore = [
    "D1",     # Missing docstrings
    "D203",   # Docstrings on class definitions not preceded by a blank line
    "D213",   # Multi-line docstring summary should start at the second line
    "D407",   # Dashed underline after doc section (not compatible with google style)
    "DJ008",  # Model does not define `__str__` method
    "RUF012", # Mutable default values in class attributes
    "PLC0415", # Import inside function (lazy load / avoid circular)
    "PLE0704", # Bare raise (re-raise from helper called in except)
    "ISC001",  # Conflicts with ruff formatter; disable to avoid unexpected behavior
]
select = [ # https://docs.astral.sh/ruff/rules
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # pycodestyle
    "C90", # mccabe
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "DJ",  # flake8-django
    "ISC", # flake8-implicit-str-concat
    "EXE", # flake8-executable
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "TCH", # flake8-type-checking
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff
]
[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["PLR2004", "S101", "S106"]
"tests/test_app/models.py" = ["A003"]  # id primary key shadows builtin

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false